--- a/App_Anchors.ipynb
+++ b/App_Anchors.ipynb
@@ -114,10 +114,11 @@
     "Label_Fecha                   = Label(frm, text='Fecha' , font=font_label).grid(column=4 , row=1)\n",
     "Entry_Fecha                   = Entry(frm , justify='center').grid(column=5 , row=1)\n",
     "\n",
-    "Percentage_load_step     = [0.15 , 0.25 , 0.50 , 0.75 , 0.95 , 1.00]\n",
-    "Percentage_creep_step    = [1.00 , 1.00 , 1.00 , 1.00 , 1.00]            \n",
-    "Percentage_download_step = [0.85 , 0.75 , 0.65 , 0.50]\n",
-    "Percentage_reload_step   = [0.65 , 0.75 , 0.85 , 1.00]\n",
+    "Percentage_load_step          = [0.15 , 0.25 , 0.50 , 0.75 , 0.95 , 1.00]\n",
+    "Percentage_creep_step         = [1.00 , 1.00 , 1.00 , 1.00 , 1.00]            \n",
+    "Percentage_download_step      = [0.85 , 0.75 , 0.65 , 0.50]\n",
+    "Percentage_reload_step        = [0.65 , 0.75 , 0.85 , 1.00]\n",
+    "Percentage_lockoff_step       = [0.95 , 0.80 , 0.70 , 0.60]\n",
     "\n",
     "Label_Step                    = Label(frm, text='Escalón de carga' , font=font_label).grid(column=0 , row=8) # Etiqueta de la columna Porcentaje\n",
     "Label_Presion                 = Label(frm, text='Presión [bar]' , font=font_label).grid(column=1 , row=8)    # Etiqueta de la columna Presión\n",
@@ -271,7 +272,9 @@
     "base_row_download   = base_row_creep + len(Percentage_creep_step)\n",
     "download_step       = step(percentage=Percentage_download_step  , initial_column=0 , initial_row=base_row_download , overshadow='#a5e1ed')\n",
     "base_row_reload     = base_row_download + len(Percentage_download_step)\n",
-    "reload_step         = step(percentage=Percentage_reload_step    , initial_column=0 , initial_row=base_row_reload   , overshadow='#ddea9a')"
+    "reload_step         = step(percentage=Percentage_reload_step    , initial_column=0 , initial_row=base_row_reload   , overshadow='#ddea9a')\n",
+    "base_row_lockoff    = base_row_reload + len(Percentage_reload_step)\n",
+    "lockoff_step        = step(percentage=Percentage_lockoff_step   , initial_column=0 , initial_row=base_row_lockoff   , overshadow='#ff7514')"
    ]
   },
   {
@@ -292,14 +295,15 @@
     "Val_Carga_creep_step , Val_Lect_creep_step , Val_Presion_creep_step , Val_Deformation_creep_step , label_creep_step                     = creep_step.step(frm)\n",
     "Val_Carga_download_step , Val_Lect_download_step , Val_Presion_download_step , Val_Deformation_download_step , label_download_step      = download_step.step(frm)\n",
     "Val_Carga_reload_step , Val_Lect_reload_step , Val_Presion_reload_step , Val_Deformation_reload_step , label_reload_step                = reload_step.step(frm)\n",
+    "Val_Carga_lockoff_step , Val_Lect_lockoff_step , Val_Presion_lockoff_step , Val_Deformation_lockoff_step , label_lockoff_step           = lockoff_step.step(frm)\n",
     "\n",
     "# Joining stages\n",
-    "Val_Lect          = Val_Lect_load_step         + Val_Lect_creep_step        + Val_Lect_download_step        + Val_Lect_reload_step\n",
-    "Val_Deformation   = Val_Deformation_load_step  + Val_Deformation_creep_step + Val_Deformation_download_step + Val_Deformation_reload_step\n",
-    "Val_Presion       = Val_Presion_load_step      + Val_Presion_creep_step     + Val_Presion_download_step     + Val_Presion_reload_step\n",
-    "Val_Carga         = Val_Carga_load_step        + Val_Carga_creep_step       + Val_Carga_download_step       + Val_Carga_reload_step\n",
-    "Percentage        = Percentage_load_step       + Percentage_creep_step      + Percentage_download_step      + Percentage_reload_step\n",
-    "Val_label             = label_load_step            + label_creep_step           + label_download_step           + label_reload_step"
+    "Val_Lect          = Val_Lect_load_step         + Val_Lect_creep_step        + Val_Lect_download_step        + Val_Lect_reload_step          + Val_Lect_lockoff_step\n",
+    "Val_Deformation   = Val_Deformation_load_step  + Val_Deformation_creep_step + Val_Deformation_download_step + Val_Deformation_reload_step   + Val_Deformation_lockoff_step\n",
+    "Val_Presion       = Val_Presion_load_step      + Val_Presion_creep_step     + Val_Presion_download_step     + Val_Presion_reload_step       + Val_Presion_lockoff_step\n",
+    "Val_Carga         = Val_Carga_load_step        + Val_Carga_creep_step       + Val_Carga_download_step       + Val_Carga_reload_step         + Val_Carga_lockoff_step\n",
+    "Percentage        = Percentage_load_step       + Percentage_creep_step      + Percentage_download_step      + Percentage_reload_step        + Percentage_lockoff_step\n",
+    "Val_label         = label_load_step            + label_creep_step           + label_download_step           + label_reload_step             + label_lockoff_step"
    ]
   },
   {
@@ -317,14 +321,7 @@
    "source": [
     "Deformation         = []\n",
     "Carga               = []\n",
-    "Load_load_step      = []\n",
-    "def_load_step       = []\n",
-    "Load_creep_step     = []\n",
-    "def_creep_step      = []\n",
-    "Load_download_step  = []\n",
-    "def_download_step   = []\n",
-    "Load_reload_step    = []\n",
-    "def_reload_step     = []\n",
+    "\n",
     "\n",
     "def obtener_textos():\n",
     "    zero = Val_Lect[0]\n",
@@ -337,17 +334,29 @@
     "        Aux_texto_Carga = Aux_Carga.cget(\"text\") # .cget() extrae alguna propiedad del widget Val_carga, en este caso \"text\"\n",
     "        Carga.append(Aux_texto_Carga)\n",
     "    \n",
-    "    Load_load_step          = Carga[:6]\n",
-    "    def_load_step           = Deformation[:6]\n",
+    "    final = len(Percentage_load_step)\n",
+    "    Load_load_step          = Carga[:final]\n",
+    "    def_load_step           = Deformation[:final]\n",
     "\n",
-    "    Load_creep_step         = Carga[5:11]\n",
-    "    def_creep_step          = Deformation[5:11]\n",
+    "    inicio = final-1\n",
+    "    final = final + len(Percentage_creep_step)\n",
+    "    Load_creep_step         = Carga[inicio:final]\n",
+    "    def_creep_step          = Deformation[inicio:final]\n",
     "\n",
-    "    Load_download_step      = Carga[10:15]\n",
-    "    def_download_step       = Deformation[10:15]\n",
+    "    inicio = final-1\n",
+    "    final = final + len(Percentage_download_step)\n",
+    "    Load_download_step      = Carga[inicio:final]\n",
+    "    def_download_step       = Deformation[inicio:final]\n",
     "    \n",
-    "    Load_reload_step        = Carga[14:]\n",
-    "    def_reload_step         = Deformation[14:]\n",
+    "    inicio = final-1\n",
+    "    final = final + len(Percentage_reload_step)\n",
+    "    Load_reload_step        = Carga[inicio:final]\n",
+    "    def_reload_step         = Deformation[inicio:final]\n",
+    "\n",
+    "    inicio = final -1\n",
+    "    final = final + len(Percentage_lockoff_step)\n",
+    "    Load_lockoff_step        = Carga[inicio:final]\n",
+    "    def_lockoff_step         = Deformation[inicio:final]\n",
     "\n",
     "    print(\"Lecturas ingresadas:\", Deformation)\n",
     "    print(\"Cargas ingresadas:\", Carga)\n",
@@ -355,7 +364,7 @@
     "    print(Load_load_step)\n",
     "    print(Load_creep_step)\n",
     "    print(def_creep_step)\n",
-    "    return def_load_step , Load_load_step , Load_creep_step , def_creep_step , Load_download_step , def_download_step , Load_reload_step , def_reload_step"
+    "    return def_load_step , Load_load_step , Load_creep_step , def_creep_step , Load_download_step , def_download_step , Load_reload_step , def_reload_step , Load_lockoff_step , def_lockoff_step"
    ]
   },
   {
@@ -373,7 +382,7 @@
     {
      "data": {
       "text/plain": [
-       "'2506005088128actualizar_texto'"
+       "'2640530424256actualizar_texto'"
       ]
      },
      "execution_count": 12,
@@ -611,7 +620,7 @@
     "def Funciones(evento=None):\n",
     "    Deformation.clear()   # Limpiar el vector Carga y Deformación para que al generar una nueva curva no quede la curva anterior\n",
     "    Carga.clear()\n",
-    "    def_load_step , Load_load_step , Load_creep_step , def_creep_step , Load_download_step , def_download_step , Load_reload_step , def_reload_step = obtener_textos()  \n",
+    "    def_load_step , Load_load_step , Load_creep_step , def_creep_step , Load_download_step , def_download_step , Load_reload_step , def_reload_step , Load_lockoff_step , def_lockoff_step = obtener_textos()  \n",
     "    generar_grafico(def_load_step , Load_load_step , Load_creep_step , def_creep_step , Load_download_step , def_download_step , Load_reload_step , def_reload_step)\n",
     "\n",
     "def actualizar_label(entry_var, label, load):\n",
@@ -669,31 +678,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lecturas ingresadas: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "Cargas ingresadas: [157.0, 247.43, 494.86, 742.61, 940.43, 990.04, 990.04, 990.04, 990.04, 990.04, 990.04, 841.52, 742.61, 643.39, 494.86, 643.39, 742.61, 841.52, 990.04]\n",
+      "Lecturas ingresadas: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "Cargas ingresadas: [144.0, 240.0, 480.0, 720.0, 912.0, 960.0, 960.0, 960.0, 960.0, 960.0, 960.0, 816.0, 720.0, 624.0, 480.0, 624.0, 720.0, 816.0, 960.0, 912.0, 768.0, 672.0, 576.0]\n",
       "[0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "[157.0, 247.43, 494.86, 742.61, 940.43, 990.04]\n",
-      "[990.04, 990.04, 990.04, 990.04, 990.04, 990.04]\n",
-      "[0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\jjeri\\AppData\\Local\\Programs\\Python\\Python39\\lib\\tkinter\\__init__.py\", line 1892, in __call__\n",
-      "    return self.func(*args)\n",
-      "  File \"C:\\Users\\jjeri\\AppData\\Local\\Temp/ipykernel_14580/1758013271.py\", line 18, in principal\n",
-      "    Funciones(evento)\n",
-      "  File \"C:\\Users\\jjeri\\AppData\\Local\\Temp/ipykernel_14580/1758013271.py\", line 5, in Funciones\n",
-      "    generar_grafico(def_load_step , Load_load_step , Load_creep_step , def_creep_step , Load_download_step , def_download_step , Load_reload_step , def_reload_step)\n",
-      "  File \"C:\\Users\\jjeri\\AppData\\Local\\Temp/ipykernel_14580/3696801852.py\", line 26, in generar_grafico\n",
-      "    ax.plot(RL_X(0.00).Vector_x() , RL_Y, color='gray', linewidth=1 , label='RL[0%]')\n",
-      "  File \"C:\\Users\\jjeri\\AppData\\Local\\Temp/ipykernel_14580/3898405595.py\", line 10, in Vector_x\n",
-      "    Aux_vector = [ Deformation[0] , ((self.RL() * Carga[4]) / (float(Modulus_elasticity.get()) * float(Area_steel_total.get()))) * 10000] # self.RL() da el valor de esa función\n",
-      "ZeroDivisionError: float division by zero\n"
+      "[144.0, 240.0, 480.0, 720.0, 912.0, 960.0]\n",
+      "[960.0, 960.0, 960.0, 960.0, 960.0, 960.0]\n",
+      "[0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "[0.0, 91.2]\n",
+      "[0.0, 102.6]\n",
+      "[0.0, 114.0]\n",
+      "[0.0, 125.4]\n",
+      "[0.0, 136.79999999999998]\n",
+      "Lecturas ingresadas: [0.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0]\n",
+      "Cargas ingresadas: [144.1, 239.9, 480.1, 720.0, 911.9, 959.9, 959.9, 959.9, 959.9, 959.9, 959.9, 816.1, 720.0, 623.9, 480.1, 623.9, 720.0, 816.1, 959.9, 911.9, 768.0, 672.0, 575.9]\n",
+      "[0.0, -10.0, -10.0, -10.0, -10.0, -10.0]\n",
+      "[144.1, 239.9, 480.1, 720.0, 911.9, 959.9]\n",
+      "[959.9, 959.9, 959.9, 959.9, 959.9, 959.9]\n",
+      "[-10.0, -10.0, -10.0, -10.0, -10.0, -10.0]\n",
+      "[0.0, 91.19]\n",
+      "[0.0, 102.58875]\n",
+      "[0.0, 113.9875]\n",
+      "[0.0, 125.38624999999999]\n",
+      "[0.0, 136.785]\n"
      ]
     }
    ],
