Average line ok

--- a/App_Anchors.ipynb
+++ b/App_Anchors.ipynb
@@ -29,7 +29,8 @@
     "import  numpy               as np\n",
     "from    math                import *\n",
     "import  pandas              as pd\n",
-    "from tkinter.font import Font"
+    "from tkinter.font import Font\n",
+    "from scipy.stats import linregress"
    ]
   },
   {
@@ -382,7 +383,7 @@
     {
      "data": {
       "text/plain": [
-       "'2640530424256actualizar_texto'"
+       "'2279059473344actualizar_texto'"
       ]
      },
      "execution_count": 12,
@@ -586,6 +587,18 @@
     "    ax.plot(RL_X(0.75).Vector_x() , RL_Y, color='gray', linewidth=1 , linestyle='dashed' , label='RL[75%]')\n",
     "    ax.plot(RL_X(1.00).Vector_x() , RL_Y, color='gray', linewidth=1 , label='RL[100%]')\n",
     "\n",
+    "    if all(valor > 0 for valor in def_reload_step):\n",
+    "        slope_download , intercept_download , _, _ , _ = linregress(def_download_step[-3:] , Load_download_step[-3:])\n",
+    "        slope_reload , intercept_reload , _, _ , _     = linregress(def_reload_step[-3:] , Load_reload_step[-3:])\n",
+    "\n",
+    "        slope_average = (slope_download + slope_reload) / 2\n",
+    "        intercept_average = (intercept_download + intercept_reload) / 2\n",
+    "\n",
+    "        x_average = [0 , max(def_reload_step)]\n",
+    "        y_average = [intercept_average , max(def_reload_step)*slope_average + intercept_average]\n",
+    "        ax.plot(x_average, y_average , 'r', linewidth=1 , linestyle='dashed')\n",
+    "\n",
+    "\n",
     "    # Configurar el gráfico\n",
     "    ax.set_xlabel('Deformación [mm]')\n",
     "    ax.set_ylabel('Carga [kN]')\n",
@@ -679,27 +692,159 @@
      "output_type": "stream",
      "text": [
       "Lecturas ingresadas: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "Cargas ingresadas: [144.0, 240.0, 480.0, 720.0, 912.0, 960.0, 960.0, 960.0, 960.0, 960.0, 960.0, 816.0, 720.0, 624.0, 480.0, 624.0, 720.0, 816.0, 960.0, 912.0, 768.0, 672.0, 576.0]\n",
+      "Cargas ingresadas: [126.0, 210.0, 420.0, 630.0, 798.0, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 630.0, 546.0, 420.0, 546.0, 630.0, 714.0, 840.0, 798.0, 672.0, 588.0, 504.0]\n",
       "[0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "[144.0, 240.0, 480.0, 720.0, 912.0, 960.0]\n",
-      "[960.0, 960.0, 960.0, 960.0, 960.0, 960.0]\n",
+      "[126.0, 210.0, 420.0, 630.0, 798.0, 840.0]\n",
+      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
       "[0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "[0.0, 91.2]\n",
-      "[0.0, 102.6]\n",
-      "[0.0, 114.0]\n",
-      "[0.0, 125.4]\n",
-      "[0.0, 136.79999999999998]\n",
-      "Lecturas ingresadas: [0.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0, -10.0]\n",
-      "Cargas ingresadas: [144.1, 239.9, 480.1, 720.0, 911.9, 959.9, 959.9, 959.9, 959.9, 959.9, 959.9, 816.1, 720.0, 623.9, 480.1, 623.9, 720.0, 816.1, 959.9, 911.9, 768.0, 672.0, 575.9]\n",
-      "[0.0, -10.0, -10.0, -10.0, -10.0, -10.0]\n",
-      "[144.1, 239.9, 480.1, 720.0, 911.9, 959.9]\n",
-      "[959.9, 959.9, 959.9, 959.9, 959.9, 959.9]\n",
-      "[-10.0, -10.0, -10.0, -10.0, -10.0, -10.0]\n",
-      "[0.0, 91.19]\n",
-      "[0.0, 102.58875]\n",
-      "[0.0, 113.9875]\n",
-      "[0.0, 125.38624999999999]\n",
-      "[0.0, 136.785]\n"
+      "[0.0, 43.757]\n",
+      "[0.0, 50.407000000000004]\n",
+      "[0.0, 57.057]\n",
+      "[0.0, 63.707]\n",
+      "[0.0, 70.357]\n",
+      "Lecturas ingresadas: [0.0, 8.04, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
+      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
+      "[0.0, 8.04, -12.23, -12.23, -12.23, -12.23]\n",
+      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
+      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
+      "[-12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
+      "[0.0, 43.75151666666666]\n",
+      "[0.0, 50.40068333333334]\n",
+      "[0.0, 57.04985]\n",
+      "[0.0, 63.699016666666665]\n",
+      "[0.0, 70.34818333333334]\n",
+      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
+      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
+      "[0.0, 8.04, 16.77, 20.24, -12.23, -12.23]\n",
+      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
+      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
+      "[-12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
+      "[0.0, 43.75151666666666]\n",
+      "[0.0, 50.40068333333334]\n",
+      "[0.0, 57.04985]\n",
+      "[0.0, 63.699016666666665]\n",
+      "[0.0, 70.34818333333334]\n",
+      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.69, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
+      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
+      "[0.0, 8.04, 16.77, 20.24, 37.06, 50.69]\n",
+      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
+      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
+      "[50.69, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
+      "[0.0, 43.75151666666666]\n",
+      "[0.0, 50.40068333333334]\n",
+      "[0.0, 57.04985]\n",
+      "[0.0, 63.699016666666665]\n",
+      "[0.0, 70.34818333333334]\n",
+      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.69, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
+      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
+      "[0.0, 8.04, 16.77, 20.24, 37.06, 50.69]\n",
+      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
+      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
+      "[50.69, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
+      "[0.0, 43.75151666666666]\n",
+      "[0.0, 50.40068333333334]\n",
+      "[0.0, 57.04985]\n",
+      "[0.0, 63.699016666666665]\n",
+      "[0.0, 70.34818333333334]\n",
+      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
+      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
+      "[0.0, 8.04, 16.77, 20.24, 37.06, 50.46]\n",
+      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
+      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
+      "[50.46, 50.46, 50.52, 50.65, 50.67, -12.23]\n",
+      "[0.0, 43.75151666666666]\n",
+      "[0.0, 50.40068333333334]\n",
+      "[0.0, 57.04985]\n",
+      "[0.0, 63.699016666666665]\n",
+      "[0.0, 70.34818333333334]\n",
+      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
+      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
+      "[0.0, 8.04, 16.77, 20.24, 37.06, 50.46]\n",
+      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
+      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
+      "[50.46, 50.46, 50.52, 50.65, 50.67, -12.23]\n",
+      "[0.0, 43.75151666666666]\n",
+      "[0.0, 50.40068333333334]\n",
+      "[0.0, 57.04985]\n",
+      "[0.0, 63.699016666666665]\n",
+      "[0.0, 70.34818333333334]\n",
+      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, 50.67, 50.39, 45.92, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
+      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
+      "[0.0, 8.04, 16.77, 20.24, 37.06, 50.46]\n",
+      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
+      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
+      "[50.46, 50.46, 50.52, 50.65, 50.67, 50.67]\n",
+      "[0.0, 43.75151666666666]\n",
+      "[0.0, 50.40068333333334]\n",
+      "[0.0, 57.04985]\n",
+      "[0.0, 63.699016666666665]\n",
+      "[0.0, 70.34818333333334]\n",
+      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, 50.67, 50.39, 45.92, 39.31, 31.7, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
+      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
+      "[0.0, 8.04, 16.77, 20.24, 37.06, 50.46]\n",
+      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
+      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
+      "[50.46, 50.46, 50.52, 50.65, 50.67, 50.67]\n",
+      "[0.0, 43.75151666666666]\n",
+      "[0.0, 50.40068333333334]\n",
+      "[0.0, 57.04985]\n",
+      "[0.0, 63.699016666666665]\n",
+      "[0.0, 70.34818333333334]\n",
+      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, 50.67, 50.39, 45.92, 39.31, 31.7, 33.09, 38.57, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
+      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
+      "[0.0, 8.04, 16.77, 20.24, 37.06, 50.46]\n",
+      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
+      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
+      "[50.46, 50.46, 50.52, 50.65, 50.67, 50.67]\n",
+      "[0.0, 43.75151666666666]\n",
+      "[0.0, 50.40068333333334]\n",
+      "[0.0, 57.04985]\n",
+      "[0.0, 63.699016666666665]\n",
+      "[0.0, 70.34818333333334]\n",
+      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, 50.67, 50.39, 45.92, 39.31, 31.7, 33.09, 38.57, 44.72, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
+      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
+      "[0.0, 8.04, 16.77, 20.24, 37.06, 50.46]\n",
+      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
+      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
+      "[50.46, 50.46, 50.52, 50.65, 50.67, 50.67]\n",
+      "[0.0, 43.75151666666666]\n",
+      "[0.0, 50.40068333333334]\n",
+      "[0.0, 57.04985]\n",
+      "[0.0, 63.699016666666665]\n",
+      "[0.0, 70.34818333333334]\n",
+      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, 50.67, 50.39, 45.92, 39.31, 31.7, 33.09, 38.57, 44.72, 50.69, -12.23, -12.23, -12.23, -12.23]\n",
+      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
+      "[0.0, 8.04, 16.77, 20.24, 37.06, 50.46]\n",
+      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
+      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
+      "[50.46, 50.46, 50.52, 50.65, 50.67, 50.67]\n",
+      "[0.0, 43.75151666666666]\n",
+      "[0.0, 50.40068333333334]\n",
+      "[0.0, 57.04985]\n",
+      "[0.0, 63.699016666666665]\n",
+      "[0.0, 70.34818333333334]\n",
+      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, 50.67, 50.39, 45.92, 39.31, 31.7, 33.09, 38.57, 44.72, 50.69, 50.69, -12.23, -12.23, -12.23]\n",
+      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
+      "[0.0, 8.04, 16.77, 20.24, 37.06, 50.46]\n",
+      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
+      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
+      "[50.46, 50.46, 50.52, 50.65, 50.67, 50.67]\n",
+      "[0.0, 43.75151666666666]\n",
+      "[0.0, 50.40068333333334]\n",
+      "[0.0, 57.04985]\n",
+      "[0.0, 63.699016666666665]\n",
+      "[0.0, 70.34818333333334]\n",
+      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, 50.67, 50.39, 45.92, 39.31, 31.7, 33.09, 38.57, 44.72, 50.69, 50.69, 32.56, -12.23, -12.23]\n",
+      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
+      "[0.0, 8.04, 16.77, 20.24, 37.06, 50.46]\n",
+      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
+      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
+      "[50.46, 50.46, 50.52, 50.65, 50.67, 50.67]\n",
+      "[0.0, 43.75151666666666]\n",
+      "[0.0, 50.40068333333334]\n",
+      "[0.0, 57.04985]\n",
+      "[0.0, 63.699016666666665]\n",
+      "[0.0, 70.34818333333334]\n"
      ]
     }
    ],
